@@ -11,12 +11,12 @@ all:
 
 dist:
 	mkdir -p ../../${distdir}/src/gentoolkit
-	cp Makefile AUTHORS README ChangeLog TODO package.py helpers.py pprinter.py __init__.py ../../${distdir}/src/gentoolkit/
+	cp Makefile AUTHORS README ChangeLog TODO errors.py package.py helpers.py pprinter.py __init__.py ../../${distdir}/src/gentoolkit/
 
 install:
 	install -d $(docdir)/gentoolkit
-	install -m 0644 AUTHORS README TODO ChangeLog $(docdir)/gentoolkit/
+	install -m 0644 AUTHORS README TODO $(docdir)/gentoolkit/
 	install -d $(DESTDIR)/usr/lib/gentoolkit/pym/gentoolkit
-	install -m 0644 package.py pprinter.py package.py $(DESTDIR)/usr/lib/gentoolkit/pym/gentoolkit/
+	install -m 0644 package.py pprinter.py helpers.py errors.py $(DESTDIR)/usr/lib/gentoolkit/pym/gentoolkit/
 	install -m 0644 __init__.py $(DESTDIR)/usr/lib/gentoolkit/pym/gentoolkit/
 	
