@@ -1,3 +1,8 @@
+2005-04-26 Marius Mauch <genone@gentoo.org>
+	* gentoolkit: fix broken Makefile
+	* gentoolkit: add some sticky tape to get the stupid thing working again
+	* equery: fix a few minor problems
+
 2005-04-25 Marius Mauch <genone@gentoo.org>
 	* qpkg: moving to /usr/share/doc/gentoolkit-*/deprecated
 	* etcat: moving to /usr/share/doc/gentoolkit-*/deprecated
